--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
                           <button class="btn btn-outline-primary" onclick="window.location.href='programacao_aplicacao.html'">Programação</button>
                             <button class="btn btn-outline-primary" onclick="window.location.href='status_operacional_aplicacao.html'">Status Operacional</button>
                           <button class="btn btn-outline-primary" onclick="window.location.href='rendimento_aplicacao.html'">Rendimento</button>
+                          <button class="btn btn-outline-primary" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
                         </div>
                     </div>
                 </div>
@@ -596,6 +597,7 @@
                           <button class="btn btn-outline-success" onclick="window.location.href='programacao_cotesia.html'">Programação</button>
                           <button class="btn btn-outline-success" onclick="window.location.href='status_operacional_cotesia.html'">Status Operacional</button>
                           <button class="btn btn-outline-success" onclick="window.location.href='rendimento_cotesia.html'">Rendimento</button>
+                          <button class="btn btn-outline-success" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
                         </div>
                     </div>
                 </div>
@@ -632,6 +634,7 @@
                             <button class="btn btn-outline-info" onclick="window.location.href='programacao_trichogramma.html'">Programacao</button>
                             <button class="btn btn-outline-info" onclick="window.location.href='status_operacional_trichogramma.html'">Status Operacional</button>
                             <button class="btn btn-outline-info" onclick="window.location.href='rendimento_trichogramma.html'">Rendimento</button>
+                            <button class="btn btn-outline-info" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
                         </div>
                     </div>
                 </div>
