--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       <div class="logo-selo-bandeira-row" style="display: flex; align-items: center; justify-content: space-between; width: 100%; padding: 0 16px; gap: 10px;">
         <img src="logo_atual.png" alt="Logo" style="height:30px;">
         <img src="toca_papai_noel.png" alt="Toca Papai Noel" style="height:36px; filter: drop-shadow(0 0 10px #ffd700);">
-        <img src="" alt="Selo do Mês" style="height:36px;">
+        <img src="treno.png" alt="Selo do Mês" style="height:36px;">
         <img src="https://flagcdn.com/w40/br.png" alt="Bandeira do Brasil" class="bandeira" style="height:28px; margin-left:auto;">
       </div>
     </header>
@@ -1053,6 +1053,7 @@
     </script>
 </body>
 </html>
+
 
 
 
