--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                           <button class="btn btn-outline-primary" onclick="window.location.href='programacao_aplicacao.html'">Programação</button>
                             <button class="btn btn-outline-primary" onclick="window.location.href='status_operacional_aplicacao.html'">Status Operacional</button>
                           <button class="btn btn-outline-primary" onclick="window.location.href='rendimento_aplicacao.html'">Rendimento</button>
-                          <button class="btn btn-outline-primary" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
+                          <button class="btn btn-outline-primary" onclick="window.location.href='enc_kml_uplo.html'">Buscar KML</button>
                         </div>
                     </div>
                 </div>
@@ -1053,6 +1053,7 @@
     </script>
 </body>
 </html>
+
 
 
 
