--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                           <button class="btn btn-outline-primary" onclick="window.location.href='programacao_aplicacao.html'">Programação</button>
                             <button class="btn btn-outline-primary" onclick="window.location.href='status_operacional_aplicacao.html'">Status Operacional</button>
                           <button class="btn btn-outline-primary" onclick="window.location.href='rendimento_aplicacao.html'">Rendimento</button>
-                          <button class="btn btn-outline-primary" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
+                          <button class="btn btn-outline-primary" onclick="window.location.href='enc_kml_uplo.html'">Buscar KML ou PDF</button>
                         </div>
                     </div>
                 </div>
@@ -649,7 +649,7 @@
                           <button class="btn btn-outline-success" onclick="window.location.href='programacao_cotesia.html'">Programação</button>
                           <button class="btn btn-outline-success" onclick="window.location.href='status_operacional_cotesia.html'">Status Operacional</button>
                           <button class="btn btn-outline-success" onclick="window.location.href='rendimento_cotesia.html'">Rendimento</button>
-                          <button class="btn btn-outline-success" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
+                          <button class="btn btn-outline-success" onclick="window.location.href='enc_kml_uplo.html'">Buscar KML ou PDF</button>
                         </div>
                     </div>
                 </div>
@@ -686,7 +686,7 @@
                             <button class="btn btn-outline-info" onclick="window.location.href='programacao_trichogramma.html'">Programacao</button>
                             <button class="btn btn-outline-info" onclick="window.location.href='status_operacional_trichogramma.html'">Status Operacional</button>
                             <button class="btn btn-outline-info" onclick="window.location.href='rendimento_trichogramma.html'">Rendimento</button>
-                            <button class="btn btn-outline-info" onclick="window.location.href='encontrar_kml.html'">Buscar KML</button>
+                            <button class="btn btn-outline-info" onclick="window.location.href='enc_kml_uplo.html'">Buscar KML ou PDF </button>
                         </div>
                     </div>
                 </div>
@@ -1147,6 +1147,7 @@
     </script>
 </body>
 </html>
+
 
 
 
