--- a/status_operacional_cotesia.html
+++ b/status_operacional_cotesia.html
@@ -130,7 +130,7 @@
 lucide.createIcons();
 
 /* Frente → Piloto */
-const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Hilton", "Frente 03":"Gabriel" };
+const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Pedro", "Frente 03":"Sem Piloto" };
 document.getElementById("selFrente").addEventListener("change",()=>{
   document.getElementById("txtPiloto").value = PILOTOS[document.getElementById("selFrente").value] || "";
 });
@@ -226,6 +226,7 @@ function abrirWhats(){
 </script>
 </body>
 </html>
+
 
 
 
