--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
             const senha = input ? input.value : '';
             if (senha === 'topgungeo') {
                 if (passwordModal) passwordModal.hide();
-                window.location.href = 'uploadkml.html';
+                window.location.href = 'painel_admin.html';
             } else {
                 if (feedback) feedback.style.display = 'block';
                 if (input) input.focus();
@@ -1147,7 +1147,6 @@
     </script>
 </body>
 </html>
-
 
 
 
